Started on porting tile system

--- a/KoreDefenceGodot.csproj
+++ b/KoreDefenceGodot.csproj
@@ -53,6 +53,8 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Scripts\Engine\Tiles\Tile.cs" />
+    <Compile Include="Core\Scripts\Engine\Tiles\TileSystem.cs" />
     <Compile Include="Core\Scripts\MainScene.cs" />
     <Compile Include="Core\Scripts\Player\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
