Implemented path generation (only works on one level)

--- a/KoreDefenceGodot.csproj
+++ b/KoreDefenceGodot.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Scripts\Engine\Tiles\Path.cs" />
     <Compile Include="Core\Scripts\Engine\Tiles\Tile.cs" />
     <Compile Include="Core\Scripts\Engine\Tiles\TileSystem.cs" />
     <Compile Include="Core\Scripts\MainScene.cs" />
