Added player base, started on state machine

--- a/KoreDefenceGodot.csproj
+++ b/KoreDefenceGodot.csproj
@@ -54,11 +54,16 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Scripts\Enemy\DefaultEnemyState.cs" />
+    <Compile Include="Core\Scripts\Engine\State\IState.cs" />
+    <Compile Include="Core\Scripts\Engine\State\IStateMachine.cs" />
+    <Compile Include="Core\Scripts\Engine\State\NodeStateMachine.cs" />
     <Compile Include="Core\Scripts\Engine\Tiles\Path.cs" />
     <Compile Include="Core\Scripts\Engine\Tiles\Tile.cs" />
     <Compile Include="Core\Scripts\Engine\Tiles\TileSystem.cs" />
     <Compile Include="Core\Scripts\MainScene.cs" />
     <Compile Include="Core\Scripts\Player\Player.cs" />
+    <Compile Include="Core\Scripts\Player\PlayerBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
