Implemented Enemy that walks on Path, and basic enemy state machine

--- a/KoreDefenceGodot.csproj
+++ b/KoreDefenceGodot.csproj
@@ -54,7 +54,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Scripts\Enemy\BaseEnemy.cs" />
     <Compile Include="Core\Scripts\Enemy\DefaultEnemyState.cs" />
+    <Compile Include="Core\Scripts\Enemy\EnemyType.cs" />
     <Compile Include="Core\Scripts\Engine\State\IState.cs" />
     <Compile Include="Core\Scripts\Engine\State\IStateMachine.cs" />
     <Compile Include="Core\Scripts\Engine\State\NodeStateMachine.cs" />
