--- a/KoreDefenceGodot.csproj
+++ b/KoreDefenceGodot.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Core\Scripts\Enemy\EnemyFactory.cs" />
     <Compile Include="Core\Scripts\Enemy\EnemyPoolWave.cs" />
     <Compile Include="Core\Scripts\Enemy\EnemyType.cs" />
+    <Compile Include="Core\Scripts\Engine\Game\GameInfo.cs" />
+    <Compile Include="Core\Scripts\Engine\Game\Wave.cs" />
     <Compile Include="Core\Scripts\Engine\State\IState.cs" />
     <Compile Include="Core\Scripts\Engine\State\IStateMachine.cs" />
     <Compile Include="Core\Scripts\Engine\State\NodeStateMachine.cs" />
