Added visual feedback when you cannot afford a tower

--- a/KoreDefenceGodot.csproj
+++ b/KoreDefenceGodot.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Core\Scripts\Engine\Game\Projectile.cs" />
     <Compile Include="Core\Scripts\Engine\Game\Wave.cs" />
     <Compile Include="Core\Scripts\Engine\Game\WaveSpec.cs" />
+    <Compile Include="Core\Scripts\Engine\GUI\CurrencyLabel.cs" />
     <Compile Include="Core\Scripts\Engine\GUI\GUIManager.cs" />
     <Compile Include="Core\Scripts\Engine\GUI\TowerButton.cs" />
     <Compile Include="Core\Scripts\Engine\State\IState.cs" />
